# fyp-3d-ct

./: .gitignore  AUROC_ISSUES_FOUND.md  README.md  eda.py  generate_evaluation_figures.py  lung_taxonomy.json  plot_localization.py
GGO-CT-Lung/: literature-review.tex  main.tex  references.bib
GGO-CT-Lung/chapters/: dataset.tex  expected-outcomes.tex  methodology.tex  objectives.tex  percentage-involvement.tex  (+1 more)
bibliography/: references.bib
data/: README.md  download_only_train_data.py  download_only_valid_data.py  download_segmentations.py  failed_segmentations.csv  failed_train_downloads.csv
eval/: generate_evaluation_figures.py  run_evaluation.py
ggo-project/: PROJECT_STRUCTURE.md
image-processing/: eda_image_processing.ipynb  pipeline.py  run_demo.py  viewer.py
models/: README.md  eda.ipynb  train.ipynb
models/axialnet-hirescam/: pyproject.toml
models/axialnet-hirescam/runs/: AxialNetBigger_Variant3.py
models/axialnet-hirescam/src/: run_experiment.py
models/biomed-parse/: pyproject.toml
models/biomed-parse/configs/model/: biomedparse.yaml  biomedparse_3D.yaml
models/biomed-parse/configs/model/backbone/: d2focal.yaml
models/biomed-parse/configs/model/sem_seg_head/: biomedparse_3d_maskformer_head.yaml  biomedparse_maskformer_head.yaml
models/biomed-parse/configs/model/sem_seg_head/pixel_decoder/: transformer_encoder_fpn.yaml
models/biomed-parse/configs/model/sem_seg_head/predictor/: boltzformer_decoder.yaml
models/biomed-parse/configs/model/sem_seg_head/predictor/language_encoder/: seem_language_encoder.yaml
models/biomed-parse/src/biomed_parse/: config.py  dataset_adapter.py  pipeline.py  prompts.py  visualize.py
models/biomed-parse/src/model/: biomedparse_3D.py
models/lc-ksvd/: .gitignore  README.md  pyproject.toml
models/lc-ksvd/src/: config.py  data_loader.py  patch_extractor.py  train.py
models/lc-ksvd/src/lc-ksvd/: config.py  data_loader.py  localize.py  train.py
models/lc-ksvd/src/lc_ksvd/: config.py  data_loader.py  infer.py  inference.py  localize.py  patch_extractor.py  train.py
models/lc-ksvd/src/lc_ksvd/lc_ksvd.egg-info/: PKG-INFO
models/lc-ksvd/src/lc_ksvd/outputs/results/: lcksvd_metrics.json
models/seg-vol/: README.md  pyproject.toml
models/seg-vol/documents/: inference_demo.md  pretrained_vit.md  training.md
scripts/: remove_hyphens.ps1
(+3216 files in other folders)
