[project]
name = "axialnet-hirescam"
version = "0.1.0"
description = "Implementation of AxialNet and HiResCam"
requires-python = ">=3.12"
dependencies = [
  "matplotlib>=3.0.0",
  "opencv-python>=3.3.1",
  "pandas>=0.23.4",
  "Pillow>=5.2.0",
  "seaborn>=0.9.0",
  "numpy>=1.15.2",
  "scikit-learn>=0.20.0",
  "scipy>=1.1.0",
  "torch>=1.1.0",
  "torchvision>=0.3.0",
  "psutil>=7.2.2",
  "imageio>=2.37.3",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
