[project]
name = "biomed-parse"
version = "0.1.0"
description = "Implementation of Biomed-Parse"
requires-python = ">=3.10.14"
dependencies = [
    "numpy==1.26.4",
    "packaging==23.0",
    "setuptools==65.6.3",
    "ninja==1.11.1.1",
    # uv add torch torchvision torchaudio --index https://download.pytorch.org/whl/cu124
    "pandas==2.2.2",
    "scikit-learn==1.4.2",
    "hydra-core==1.3.2",
    "lightning==2.3.0",
    "marshmallow==3.23.2",
    "timm==0.9.16",
    "deepspeed==0.14.2",
    "transformers==4.40.0",
    "open-clip-torch==2.26.1",
    "sentencepiece==0.2.0",
    "kornia==0.7.3",
    "python-dotenv==1.0.1",
    "azure-ai-ml==1.16.1",
    "azureml-acft-image-components[olympus]==0.0.79"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
